Benchmarks/Results/releases/v1.2.1/release-body.md
## Why This Release Matters

- SwiftIntelligence currently ships a validated flagship workflow: `Vision -> NLP -> Privacy`
- Release posture: `ready / release-grade`
- Fastest first proof path: `bash Scripts/validate-flagship-demo.sh`

## Proof Pack

- [release-notes-proof.md](release-notes-proof.md)
- [release-proof.md](release-proof.md)
- [public-proof-status.md](public-proof-status.md)
- [benchmark-summary.md](benchmark-summary.md)
- [flagship-demo-pack.md](flagship-demo-pack.md)
- `flagship-demo-share-pack.tar.gz`

## Flagship Demo Path

- Demo: `Intelligent Camera`
- Flow: `Vision -> NLP -> Privacy`
- Fastest app run: `macOS 14+` or `iOS 17+`, then tap `Analyze Frame`
- First proof command: `bash Scripts/validate-flagship-demo.sh`
- Success signals: populated `Top labels`, populated `OCR`, generated `Summary`, tokenized `Privacy preview`
- Published media ships inside `flagship-demo-share-pack.tar.gz` (`intelligent-camera-success.png`, `intelligent-camera-run.mp4`, `caption.txt`)

## What's Changed


- tightened the README first-screen repo-fit narrative and reduced top-level decision repetition
- unified flagship and secondary demo media into one canonical README demo gallery
- strengthened GitHub presentation quality with visual snapshot and copy-density anti-regression gates
- tightened docs, trust, showcase, and comparison routing so public narrative stays shorter and more consistent
- refreshed the patch release evidence chain and GitHub release surfaces to match the current live repository state

## Release Proof

- Release: `v1.2.1`
- Evidence bundle: `Benchmarks/Results/releases/v1.2.1`
- Git commit: `699df19bf2197077aada46ea355d929a6f7691b5`
- Benchmark profile: `standard`
- Benchmark run generated at: `2026-04-15T13:00:40Z`
- Evidence archived at: `2026-04-15T13:01:36Z`
- Performance score: `55.55`
- Average execution time: `0.0785s`
- Environment: `Version 26.4.1 (Build 25E253)`, `18` processors

## Adoption Snapshot

- strongest first-run flow: `Vision -> NLP -> Privacy`
- flagship demo validation: `bash Scripts/validate-flagship-demo.sh`
- public proof envelope is carried in `public-proof-status.md` when bundled

## Validation Gate

- `swift build -c release`
- `bash Scripts/validate-flagship-demo.sh`
- `bash Scripts/validate-examples.sh`
- `swift test`
- `bash Scripts/run-benchmarks.sh standard Benchmarks/Results/latest`
- immutable benchmark evidence archived under `Benchmarks/Results/releases/v1.2.1`

## Attached Artifacts

- [benchmark-summary.md](benchmark-summary.md)
- [benchmark-report.json](benchmark-report.json)
- [environment.json](environment.json)
- [metadata.json](metadata.json)
- [release-proof.md](release-proof.md)
- [benchmark-delta.md](benchmark-delta.md)
- [release-blockers.md](release-blockers.md)
- [public-proof-status.md](public-proof-status.md)
- [device-evidence-handoff.md](device-evidence-handoff.md)

## Benchmark Evidence

- Evidence bundle: `Benchmarks/Results/releases/v1.2.1`
- Snapshot name: `v1.2.1`
- Git ref: `v1.2.1`
- Git commit: `699df19bf2197077aada46ea355d929a6f7691b5`
- Benchmark profile: `standard`
- Benchmark run generated at: `2026-04-15T13:00:40Z`
- Evidence archived at: `2026-04-15T13:01:36Z`
- Evidence source kind: `local-directory`
- Evidence source path: `Benchmarks/Results/latest`
- Device class: `Mac`
- Device name: `muhittin-macbook-pro-2.local`
- Device model: `arm64`
- Platform family: `macOS`
- Total workloads: `25`
- Performance score: `55.55`
- Average execution time: `0.0785s`
- Environment: `Version 26.4.1 (Build 25E253)`, `18` processors, `48.0 GB` RAM
- Fastest workload: `ML_Prediction_Small` (`0.0061s`)
- Slowest workload: `ML_Model_Loading` (`0.3084s`)

Attached benchmark assets were copied from this immutable evidence bundle.

## Benchmark Delta

- Current evidence bundle: `Benchmarks/Results/releases/v1.2.1`
- Current git ref: `v1.2.1`
- Current generated at: `2026-04-15T13:00:40Z`

- Baseline evidence bundle: `Benchmarks/Results/releases/iphone-baseline-2026-04-07`
- Baseline git ref: `iphone-baseline-2026-04-07`
- Baseline generated at: `2026-04-07T15:01:01Z`

### Headline Deltas

| Metric | Current | Baseline | Delta |
| --- | ---: | ---: | ---: |
| Performance score | 55.55 | 38.59 | +43.97% |
| Average execution time (s) | 0.0785 | 0.0793 | -0.99% |
| Total memory (MB) | 246.9 | 1037.3 | -76.20% |
| Workloads | 25 | 25 | +0 |

### Top Improvements

- `Cache_Write_Performance`: 0.1226s -> 0.0996s (-18.81%)
- `Cache_Read_Performance`: 0.1174s -> 0.0956s (-18.56%)
- `Vision_Object_Detection`: 0.1581s -> 0.1554s (-1.68%)
- `Integration_Concurrent_Processing`: 0.0637s -> 0.0628s (-1.33%)
- `Integration_Multi_Modal`: 0.2384s -> 0.2355s (-1.18%)

### Top Regressions

- `NLP_Entity_Recognition`: 0.0215s -> 0.0237s (+10.03%)
- `NLP_Text_Analysis_Small`: 0.0112s -> 0.0122s (+8.16%)
- `Network_Local_Request`: 0.0112s -> 0.0120s (+7.76%)
- `Privacy_Tokenization`: 0.0215s -> 0.0231s (+7.52%)
- `Speech_Synthesis_Short`: 0.0269s -> 0.0289s (+7.48%)

### Evidence Links

- Current summary: [benchmark-summary.md](benchmark-summary.md)
- Baseline summary: [`Benchmarks/Results/releases/iphone-baseline-2026-04-07/benchmark-summary.md`](../../Benchmarks/Results/releases/iphone-baseline-2026-04-07/benchmark-summary.md)
- Baseline metadata: [`Benchmarks/Results/releases/iphone-baseline-2026-04-07/metadata.json`](../../Benchmarks/Results/releases/iphone-baseline-2026-04-07/metadata.json)

Interpretation rule: negative execution-time delta is better. Cross-device comparisons are directional only.

# Release Blockers

Generated summary of the blockers that still prevent release-grade public benchmark positioning.

## Headline

- Publish readiness: `ready`
- Immutable release bundles: `2`
- Device classes seen: `Mac, iPhone`
- Missing required release device classes: `none`

## What Is Not Blocking

- The active modular graph is building and testing cleanly.
- Benchmark artifacts, manifests, checksums, provenance, and threshold gates are in place.
- Transfer, import, and packetized handoff flows already exist.

## What Is Blocking

- No required release device classes are currently missing.
- Remaining work is release hygiene, optional extra device breadth, and positioning quality.

## Immediate Execution Surface

- Capture packets: [Device-Capture-Packets.md](Device-Capture-Packets.md)
- Maintainer intake: [Device-Evidence-Intake.md](Device-Evidence-Intake.md)
- Operational runbook: [Device-Evidence-Runbook.md](Device-Evidence-Runbook.md)

## Exit Condition

- `Benchmark-Readiness.md` reports `ready`.
- `Device-Coverage-Matrix.md` includes all required release device classes from `device-matrix-policy.json`.
- `prepare-release.sh` still passes after the new bundles are archived.

# Public Proof Status

Generated claim envelope for distribution, README language, release messaging, and public positioning.

## Status

- Publish readiness: `ready`
- Distribution posture: `release-grade`
- Immutable release bundles: `2`
- Device classes seen: `Mac, iPhone`
- Missing required device classes: `none`
- Flagship media status: `published`
- Machine-readable payload: [public-proof-status.json](public-proof-status.json)

## Why Adopt Now

- strongest proof path: `Vision -> NLP -> Privacy`
- first demo guide: [../../Examples/DemoApps/IntelligentCamera/README.md](../../Examples/DemoApps/IntelligentCamera/README.md)
- first immutable release proof: [Latest-Release-Proof.md](Latest-Release-Proof.md)
- flagship media truth surface: [Flagship-Media-Status.md](Flagship-Media-Status.md)

## Allowed Public Claims

- The active modular graph builds and tests cleanly.
- The flagship demo path has a dedicated guide and smoke-check.
- Benchmark artifacts, manifests, checksums, provenance, and threshold gates exist.
- A first immutable release baseline exists.
- Device capture, export, import, packet, and intake flows are implemented.

## Blocked Public Claims

- none

# Device Evidence Handoff

Generated export surface for the missing device evidence waves that still block release-grade benchmark positioning.

## Status

- Publish readiness: `ready`
- Distribution posture: `release-grade`
- Pending device classes: `none`
- Queue source: [Device-Evidence-Queue.md](Device-Evidence-Queue.md)
- Intake source: [Device-Evidence-Intake.md](Device-Evidence-Intake.md)
- Runbook source: [Device-Evidence-Runbook.md](Device-Evidence-Runbook.md)
- Machine-readable payload: [device-evidence-handoff.json](device-evidence-handoff.json)

## Export Command

```bash
bash Scripts/export-device-evidence-handoff.sh /absolute/path/to/device-evidence-handoff.tar.gz
```

## Included Surfaces

- queue summary and JSON payload
- intake summary and maintainer runbook
- packet index and per-device packet folders
- release blockers and public proof envelope
- GitHub `device_evidence` issue form

## State

- No pending device evidence waves remain.



## Installation

### Swift Package Manager
```swift
dependencies: [
    .package(url: "https://github.com/muhittincamdali/SwiftIntelligence.git", from: "1.2.1")
]
```
